--- a/src/style/bootstrap/css/bootstrap.scss
+++ b/src/style/bootstrap/css/bootstrap.scss
@@ -18,7 +18,7 @@
 @import "type";
 @import "images";
 @import "containers";
-@import "grid";
+//@import "grid"; 
 @import "tables";
 @import "forms";
 @import "buttons";
