--- a/src/style/base/_mixins.scss
+++ b/src/style/base/_mixins.scss
@@ -141,14 +141,14 @@
 
 	// .wauto#{$mod} 				{ width:auto }
 	// .hauto#{$mod} 				{ height:auto }
-	// .pl-0#{$mod} 				{ padding-left:0 }
-	// .pr-0#{$mod} 				{ padding-right:0 }
+	.pl-0#{$mod} 					{ padding-left:0 }
+	.pr-0#{$mod} 					{ padding-right:0 }
 	.pt-0#{$mod} 					{ padding-top:0 }
-	// .pb-0#{$mod} 				{ padding-bottom:0 }
+	.pb-0#{$mod} 					{ padding-bottom:0 }
 	.mt-0#{$mod} 					{ margin-top:0 }
 	.mb-0#{$mod} 					{ margin-bottom:0 }
-	// .mr-0#{$mod} 				{ margin-right:0 }
-	// .ml-0#{$mod} 				{ margin-left:0 }
+	.mr-0#{$mod} 					{ margin-right:0 }
+	.ml-0#{$mod} 					{ margin-left:0 }
 
 
 	@if ( $mod != null )  {  
@@ -176,17 +176,20 @@
 	@for $i from 1 through 100 {
 		@if $say == $i{
 			
-			@if ( $mod == null ) or  ( $mod == '-md')  or  ( $mod == '-xs') {
+			//@if ( $mod == null ) or  ( $mod == '-md')  or  ( $mod == '-xs') {
 			
 				.w-#{$i}#{$mod} 	 { width:#{$i}#{'%'} }
 				.mt-#{$i}#{$mod} 	 { margin-top:#{$i}#{'px'} }
 				.mb-#{$i}#{$mod} 	 { margin-bottom:#{$i}#{'px'} }
 				.ml-#{$i}#{$mod} 	 { margin-left:#{$i}#{'px'} }
+				.pl-#{$i}#{$mod} 	 { padding-left:#{$i}#{'px'} }
 				.pt-#{$i}#{$mod}   { padding-top:#{$i}#{'px'} }
 				.pb-#{$i}#{$mod}   { padding-bottom:#{$i}#{'px'} }
 				.py-#{$i}#{$mod}   { padding-top:#{$i}#{'px'}; padding-bottom:#{$i}#{'px'} }
+				.my-#{$i}#{$mod}   { margin-top:#{$i}#{'px'}; margin-bottom:#{$i}#{'px'} }
 				
-			}
+				
+			//}
 
 		
 			// .h#{$mod}-#{$i} 	  { height:#{$i}#{'%'} }
