--- a/src/style/builds/grid/_mix.scss
+++ b/src/style/builds/grid/_mix.scss
@@ -52,7 +52,7 @@
       @if not $n                       { 
 
          &.nsc                         { margin-left:auto; margin-right:auto }
-         &.ns,&.nsc                    { --rg:0; --cg:0 }
+         &.ns,&.nsc                    { --rg:0px; --cg:0px }
          
          &.c-eh > *                    {
             > *                        { height: 100%;  width: 100%; display: block  }
