--- a/src/style/pages/_about.scss
+++ b/src/style/pages/_about.scss
@@ -1,6 +1,6 @@
 .about 							{
 
-	.body 						{
+	.base-body 					{
 		h1 						{ font-size:2.2rem }
 		summary 				{ font-size:20px; text-align:justify }
 
