--- a/src/style/pages/_about.scss
+++ b/src/style/pages/_about.scss
@@ -1,9 +1,8 @@
 .about 							{
 
-	.base-body 					{
+	.base-body .us				{
 		h1 						{ font-size:2.2rem }
 		summary 				{ font-size:20px; text-align:justify }
-
 		p 						{ font-size:16px; margin-bottom:15px; text-align:justify }
 	}	
 
