--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -263,6 +263,7 @@ blockquote.record 				{ display: flex;align-items: center;padding:20px 10px 20px
  @import "pages/home";
  @import "pages/about";
  @import "pages/product";
+ @import "pages/sektor";
 
 // @import "pages/dashboard";
 // @import "pages/oturum";
