--- a/src/style/inc/_posts.scss
+++ b/src/style/inc/_posts.scss
@@ -56,7 +56,7 @@
 /*  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  - 
 @ post model 1  */ 
 
-.sec-posts.f-1 							{
+.f-1.sec-posts 							{
 	figure 								{ background:#f9f9f9; border-radius:4px }
 	h3 									{ font-size:19px }
 	a 									{ display:block; height:100%; padding-bottom:50px }
