--- a/src/style/layout/_layout.scss
+++ b/src/style/layout/_layout.scss
@@ -62,6 +62,30 @@ html.query 							{ pointer-events: none; background:url('img/load/spin.gif') no
 }
 
 /*  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -
+ @ body > head  */
+
+.body-head 					{
+
+	&.f-1 					{
+		h1 					{ font-size:2.2rem }
+		summary 			{ font-size:20px; text-align:justify }
+		p 					{ font-size:16px; margin-bottom:15px; text-align:justify }
+	}	
+
+	&.f-3 					{
+		h1 					{ font-size:2.2rem; margin-bottom:8px; }
+		p 					{ font-size:22px; text-align:justify }
+	}
+
+	&.f-2 					{
+		h1 					{ font-size:42px; margin-bottom:6px }
+		p 					{ font-size:30px }
+	}
+}
+
+
+
+/*  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -
  @ cart : acrod  */
 
 .acord 								{
@@ -73,12 +97,12 @@ html.query 							{ pointer-events: none; background:url('img/load/spin.gif') no
 			}
 		}
 		
-		&:not([open]) 				{
+		&:not([open]) summary 		{
 			span i:nth-child(1) 	{  display:block}
 			span i:nth-child(2) 	{  display:none }
 		}
 
-		&[open] 					{
+		&[open] summary				{
 			span i:nth-child(1) 	{  display:none  }
 			span i:nth-child(2) 	{  display:block }
 		}
