--- a/src/style/base/_reset.scss
+++ b/src/style/base/_reset.scss
@@ -2,7 +2,7 @@
  @ reset */
 
 *       { margin:0; padding:0; list-style-type: none; outline-width: 0; outline-style: none; position: relative;  box-sizing: border-box }
-* 		{ -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none  }
+//* 		{ -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none  }
 
 
 i,em 	{ font-style:normal; }
